test/libsolidity/syntaxTests/pragma/broken_version_6.sol
pragma solidity v1.2.3;
// ----
// ParserError 1684: (0-23): Invalid version pragma. Expected the start of a version number but instead found character 'v'. Version number is invalid or the pragma is not terminated with a semicolon.
